
- Bug: SingleCheckBoxFieldWidget doesn't repeat the label twice (once in
  <div class="label">, and once in the <label> next to the checkbox).

- Feature: The widget for fields implementing IChoice is now looked up by
  querying for an adapter for (field, field.vocabulary, request) so it can be
  differentiated according to the type of the source used for the field.

Version 1.9.0 (2008-08-26)
--------------------------

- Feature: Use the ``query()`` method in the widget manager to try extract a
  value. This ensures that the lookup is never failing, which is particularly
  helpful for dictionary-based data managers, where dictionaries might not
  have all keys.

- Feature: Changed the ``get()`` method of the data manager to throw an error
  when the data for the field cannot be found. Added ``query()`` method to
  data manager that returns a default value, if no value can be found.

- Feature: Deletion of widgets from field widget managers is now possible.

- Feature: Groups now produce detailed `ObjectModifiedEvent` descriptions like
  regular edit forms do. (Thanks to Carsten Senger for providing a patch.)

- Feature: The widget manager's ``extract()`` method now supports an optional
  ``setErrors`` (default value: True) flag that allows one to not set errors
  on the widgets and widget manager during data extraction. Use case: You want
  to inspect the entered data and handle errors manually.

- Bug: The ``ignoreButtons`` flag of the ``z3c.form.form.extends()`` method
  was not honored. (Thanks to Carsten Senger for providing a patch.)

- Bug: Group classes now implement ``IGroup``. This also helps with the
  detection of group instantiation. (Thanks to Carsten Senger for providing a
  patch.)

- Bug: The list of changes in a group were updated incorrectly, since it was
  assumed that groups would modify mutually exclusive interfaces. Instead of
  using an overwriting dictionary ``update()`` method, a purely additive merge