@@ -1,6 +1,6 @@
 [buildout]
 develop = . benchmark
-parts = test checker coverage-test coverage-report docs i18n benchmark
+parts = test checker coverage-test coverage-report docs i18n benchmark python
 
 [test-environment]
 CHAMELEON_DEBUG = False
@@ -64,3 +64,8 @@ defaults = ['-m', 'benchmark']
 [benchmark-environment]
 CHAMELEON_DEBUG = False
 CHAMELEON_CACHE = True
+
+[python]
+recipe = zc.recipe.egg
+eggs = z3c.form
+interpreter = python
